refactor: clean up static-analysis findings
Resolve static-analysis findings and modernize small Java 25 usages
without changing application behavior.

- Remove redundant exception handling and dead test support code.
- Reuse the absent-backup path constant and clarify unused lock
  resources.
- Validate required image resources before constructing the startup
  icon.
- Use Java 25 collection and numeric helpers in history, UI, and tests.
- Use Files.writeString in the storage reader test.